log
Wed, May  7, 2025  4:51:08 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Wed, May  7, 2025  5:12:24 PM: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:54:18: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     int** sudo = n->sudo;
                  ^
sudoku.c:54:11: error: unused variable 'sudo' [-Werror=unused-variable]
     int** sudo = n->sudo;
           ^~~~
cc1.exe: all warnings being treated as errors
10625e9
Wed, May  7, 2025  5:12:38 PM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
9d9a5cf
